<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Color Therapies</string>
    <string name="hello_world">Color Therapy</string>
    <string name="title_activity_splash_screen">Color Therapies</string>
    <string name="string_dashboard_header">Your today\'s color prediction</string>
    <string name="title_activity_login">Login</string>
    <string name="login_username">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="login_signup">Create new account</string>
    <string name="title_activity_registration">Create a new account</string>
    <string name="register_retype_password">Confirm Password</string>
    <string name="register_fullname">Full Name</string>
    <string name="register_gender">Gender</string>
    <string name="register_gender_male">Male</string>
    <string name="register_gender_female">Female</string>
    <string name="register_dob">Date Of Birth</string>
    <string name="register_phone">Mobile Number</string>
    <string name="register_city">City</string>
    <string name="register_country">Country</string>
    <string name="register_agree_terms">You agree with our terms and conditions</string>
    <string name="Create">Create Account</string>
    <string name="register_mandatory">* All the fields are mandatory</string>
<string name="register_already_login">Already Registered ?</string>
<string name="thank_you">Thank You </string>
<string name="welcome_premium_takeme">Okay! Take me to the dashboard</string>
<string name="welcome_premium_acknowledge">You are now our premium subscriber</string>
    <string name="welcome_register_success">Your account created successfully</string>
</resources>
